# VoxelGame

./: .gitmodules  CMakeLists.txt  README.md
include/: block.h  chunk.h  chunkManager.h  common.h  cubeVertices.h  shader.h  terrain.h  texture.h
res/shader/: fragmentShader.glsl  vertexShader.glsl
src/: chunk.cpp  chunkManager.cpp  common.cpp  main.cpp  terrain.cpp
